feat: infiniteScrollImages, optimize view pages, optimize lazy image.

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1,3 +1,10 @@
+@import 'tailwindcss';
+
+.hover-box {
+  opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
 .hover-box:hover {
-  opacity: 0.9;
+  opacity: 0.6;
 }
